{
  "version": 4,
  "terraform_version": "1.15.9",
  "serial": 16,
  "lineage": "900f7801-1f57-5271-6a3a-874cbdfc4cb8",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-08-26T18:44:13.419-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-7770b360-47ef-4e14-9f6/global/firewalls/allow-internal-icmp",
            "log_config": [],
            "name": "allow-internal-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/global/networks/terraform-network",
            "priority": 1000,
            "project": "project-7770b360-47ef-4e14-9f6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/global/firewalls/allow-internal-icmp",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "k8s-node"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "k8s-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_k8s_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443",
                  "2379-2380"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8472"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2026-08-26T18:44:13.435-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-7770b360-47ef-4e14-9f6/global/firewalls/allow-k8s-internal",
            "log_config": [],
            "name": "allow-k8s-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/global/networks/terraform-network",
            "priority": 1000,
            "project": "project-7770b360-47ef-4e14-9f6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/global/firewalls/allow-k8s-internal",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "k8s-node"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "k8s-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-08-26T18:44:13.410-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-7770b360-47ef-4e14-9f6/global/firewalls/allow-ssh-external",
            "log_config": [],
            "name": "allow-ssh-external",
            "network": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/global/networks/terraform-network",
            "priority": 1000,
            "project": "project-7770b360-47ef-4e14-9f6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/global/firewalls/allow-ssh-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260817",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/zones/asia-southeast2-a/disks/instance-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/project-7770b360-47ef-4e14-9f6/zones/asia-southeast2-a/instances/instance-1",
            "instance_id": "4769694578324417499",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "tiaratristyan:ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBFChEFVCukUxllBisBiU7i5rRVxzdJ4X1x4OLZLkvFEjC8h9eWNSwiZJvPrx6gB+fy2J+bduLCyeWBMyc8/oQXc= google-ssh {\"userName\":\"tiaratristyan@gmail.com\",\"expireOn\":\"2026-08-27T01:51:09+0000\"}\ntiaratristyan:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAHKNUPQfvz6Ek4x947WgOupRutOp/aAvJBHTxaCPnbSf9f0T0Q+976F0C9bbj48XyhQ62ykb/AP8d7qoItSoJhjn0Qyar0/T9xDl1g1iD6AmWpK2LP6Kmfmsg8r8fu5tXQ0uKUKH0mCrciycsZ5+2Ij [...]
            },
            "metadata_fingerprint": "xmVFOlgtMj4=",
            "name": "instance-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.128.115.242",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/global/networks/terraform-network",
                "network_ip": "10.184.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/regions/asia-southeast2/subnetworks/terraform-network",
                "subnetwork_project": "project-7770b360-47ef-4e14-9f6"
              }
            ],
            "project": "project-7770b360-47ef-4e14-9f6",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/zones/asia-southeast2-a/instances/instance-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-node"
            ],
            "tags_fingerprint": "PMlaEWobTyo=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260817",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/zones/asia-southeast2-a/disks/instance-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/project-7770b360-47ef-4e14-9f6/zones/asia-southeast2-a/instances/instance-2",
            "instance_id": "6354907517686000604",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "tiaratristyan:ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBG9eYi7J48yVXzlT60Jl+Pria+oT4pOzEwVSDRtIc7nk7OGYxmer5bA8ISQ+W91zqUYTNKNynFcnB1UCfr7CY+A= google-ssh {\"userName\":\"tiaratristyan@gmail.com\",\"expireOn\":\"2026-08-27T01:53:54+0000\"}\ntiaratristyan:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAG8lgi1npyo0kauh2ZBLAZOiv22F7lqYe2UkdiX/o/TrAe6R8TtND8WbFQfV+gECG9qNZeSEN2N/ZQ+Y/vgBBuhWnJiRzscUEv/lRMp8kEJVkry2x4rxQtejEITEpXg68T2pXmTKfOpVdI4Vqg2UUVk [...]
            },
            "metadata_fingerprint": "vSCcdKIFBzs=",
            "name": "instance-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.128.124.10",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/global/networks/terraform-network",
                "network_ip": "10.184.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/regions/asia-southeast2/subnetworks/terraform-network",
                "subnetwork_project": "project-7770b360-47ef-4e14-9f6"
              }
            ],
            "project": "project-7770b360-47ef-4e14-9f6",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/zones/asia-southeast2-a/instances/instance-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-node"
            ],
            "tags_fingerprint": "PMlaEWobTyo=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260817",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/zones/asia-southeast2-a/disks/instance-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/project-7770b360-47ef-4e14-9f6/zones/asia-southeast2-a/instances/instance-3",
            "instance_id": "707473321031248859",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "tiaratristyan:ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBMup40bRK9XLFLz/8RGHNyyR7/yvQ8/aEdAI+NzUSkkdt/PBRcGTVK6PKj9gLIuFbWA1OCegQ7zJ4e1u7GHZX0U= google-ssh {\"userName\":\"tiaratristyan@gmail.com\",\"expireOn\":\"2026-08-27T01:53:55+0000\"}\ntiaratristyan:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCXFHkOBnFSamLlq+1j6m8o7b49awX6taVFHcPS6H92pc//b3E66QzcVPmUg/MB6gnrwg07rPpnVHe4xeERkUmQ69nBE7oUY9YGsGKWVMHbs+WVUtGpP/1+HukqpWMjzTeFY1WMqMZy6tGNvo1PEvB [...]
            },
            "metadata_fingerprint": "3gzr5ZyKQx8=",
            "name": "instance-3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.128.123.171",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/global/networks/terraform-network",
                "network_ip": "10.184.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/regions/asia-southeast2/subnetworks/terraform-network",
                "subnetwork_project": "project-7770b360-47ef-4e14-9f6"
              }
            ],
            "project": "project-7770b360-47ef-4e14-9f6",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/zones/asia-southeast2-a/instances/instance-3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-node"
            ],
            "tags_fingerprint": "PMlaEWobTyo=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-7770b360-47ef-4e14-9f6/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "3740991864449489258",
            "project": "project-7770b360-47ef-4e14-9f6",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-7770b360-47ef-4e14-9f6/global/networks/terraform-network"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}